Align HashBox implementation with PUI report
